<resources>
    <string name="app_name">Novel</string>
    <string name="todo">TODO</string>
    <string name="novel">novel</string>
    <string name="text_enter_e_mail">Введите ваш e-mail для входа</string>
    <string name="email">Введите email</string>
    <string name="el_problema">Проблемы со входом?</string>
    <string name="_dfdfemail">Укажите email, на который зарегистрирован ваш аккаунт.</string>
    <string name="google_enter">Войти через Google</string>
    <string name="cont">Продолжить</string>
    <string name="enter_verify_code_text">Введите ваш проверочный код</string>
    <string name="send_again">Отправить повторно</string>
    <string name="err_text">Произошла ошибка. Проверьте код.</string>
    <string name="after_enter">После введения данных в поле, Вы не сможете его изменить.</string>
    <string name="enter_name">Введите имя</string>
    <string name="en">Введите ваше имя</string>
    <string name="enter_bd">Укажите вашу дату рождения</string>
    <string name="_16_more">Приложение предназначено для лиц старше 16 лет.</string>
    <string name="auto_or_manual">Ваш город будет определён автоматически или можете указать его вручную</string>
    <string name="enter_loc">Укажите ваше местоположение</string>
    <string name="manually">Указать геолокацию вручную</string>
    <string name="moskow">Москва</string>
    <string name="or_manual">Укажите город вручную</string>
    <string name="add_photos_text">Добавте фотографии для профиля</string>
    <string name="app_will_select">Приложение выберет фото для профиля, можно будет редактировать в настройках</string>
    <string name="_more">Не менее 4 фотографий</string>
    <string name="enter_sex">Укажите ваш пол</string>
    <string name="im_male">Я мужчина</string>
    <string name="im_female">Я женщина</string>
    <string name="about_me_shortly">Напишите краткое описание о себе</string>
    <string name="ert">Напишите краткую информацию о себе для привлечения внимания других пользователей</string>
    <string name="_55_more">до 300 символов</string>
    <string name="extra_text">Для продолжения\nзаполните данные</string>
    <string name="d">Д</string>
    <string name="m">М</string>
    <string name="y">Г</string>
    <string name="select_acc">Выберите аккаунт через который хотите войти</string>
    <string name="open_settings">Открыть настройки</string>
    <string name="check_conn">Проверьте подключенте к интернету</string>
    <string name="failed_to_load_data">Не удалось загрузить данные</string>
    <string name="get_boost">Получить\nБусты</string>
    <string name="crystal_shop">Магазин\nКристаллов</string>
    <string name="invisible_mode">Невидимый\nрежим</string>
    <string name="err_more4photo">Вы выбрали больше 4 фото. Попробуйте снова.</string>
    <string name="delete_photo">Удалить фото</string>
    <string name="dmy">ДДММГГГГ</string>
    <string name="dislike">Dislike</string>
    <string name="like">Like</string>
    <string name="base_sub">Базовая подписка</string>
    <string name="_100">От 100 р</string>
    <string name="subs">Подписки</string>
    <string name="boosts">Бусты</string>
    <string name="_30_boost">Переместите свой профиль на первое место в выбранной зоне поиска на 30 минут, чтобы найти больше пар</string>
    <string name="_0boost">Бустов: 0</string>
    <string name="get_boosts">Получить бусты</string>
    <string name="more">Подробнее</string>
    <string name="inv_mode">Невидимый режим</string>
    <string name="_0boost_total">Всего бустов: 0</string>
    <string name="buy_boost_text">Купить бусты</string>
    <string name="boosts_sss">Бусты</string>
    <string name="_1boost">1 буст</string>
    <string name="_3boost">3 буста</string>
    <string name="_5boost">5 бустов</string>
    <string name="_10boost">10 бустов</string>
    <string name="_100rub">100 ₽</string>
    <string name="_300rub">300 ₽</string>
    <string name="_500rub">500 ₽</string>
    <string name="_1100rub">1000 ₽</string>
    <string name="_900rub">900 ₽</string>
    <string name="or">или</string>
    <string name="pro___">PRO-</string>
    <string name="ver">ВЕРСИЯ</string>
    <string name="bp">Буст профиля</string>
    <string name="cry_fuck">Кристаллы</string>
    <string name="_0crystals">Всего кристаллов: 0</string>
    <string name="_1cry">1 кристалл</string>
    <string name="_3cry">3 кристалла</string>
    <string name="_5cry">5 кристаллов</string>
    <string name="_10cry">10 кристаллов</string>
    <string name="buy_crystalls_text">Купить кристаллы</string>
    <string name="exch">Разменять</string>
    <string name="sos">Выбрать другое количество</string>
    <string name="_1">1</string>
    <string name="calc_sum">Расчет суммы</string>
    <string name="exc_cryyyyy">Разменять кристаллы</string>
    <string name="total_balance">Общий баланс</string>
    <string name="_8_000">8,000 ₽</string>
    <string name="n">Введите следующие\nданнные карты</string>
    <string name="card_num">Номер карты</string>
    <string name="mm_yy">Месяц / Год</string>
    <string name="cvv">CVV</string>
    <string name="sum">Сумма</string>
    <string name="pay_from">Оплатить через</string>
    <string name="pay_text_ff">Оплата</string>
    <string name="save_card_text">Сохранить карту</string>
    <string name="one_click_save_card">Сохраняй данные карты и оплачивай в один клик, экономь своё время</string>
    <string name="pay_result">Результат оплаты</string>
    <string name="pay_success">Оплата произошла\nуспешно</string>
    <string name="_10number">10</string>
    <string name="search_text_params">Параметры поиска</string>
    <string name="wegv">Укажите количество подарков</string>
    <string name="cancel">Отмена</string>
    <string name="send">Отправить</string>
    <string name="redact">Редактирование</string>
    <string name="red">Редактировать</string>
    <string name="preview_text">Предпросмотр</string>
    <string name="media">Медиафайлы</string>
    <string name="abm">Обо мне</string>
    <string name="my_height">Мой рост</string>
    <string name="_100just">120</string>
    <string name="mainly">Основное</string>
    <string name="my_inerests">Мои интересы</string>
    <string name="my_langs">Языки, которыми я владею</string>
    <string name="base_sub_text">Базовая подписка</string>
    <string name="extra_abilities_text">Расширь свои возможности</string>
    <string name="sport">Спорт</string>
    <string name="pets">Питомцы</string>
    <string name="nverify_text">Пройдите\nверификацию с фото</string>
    <string name="go_ver">Пройти</string>
    <string name="find_love_text">Ищу любовь</string>
    <string name="tp_text">Планы\nна сегодня</string>
    <string name="me_friends_text">Будем\nдрузьями</string>
    <string name="coffee_meet_text">Свидание\nза кофе</string>
    <string name="new_matches_text">Новые пары</string>
    <string name="it_s_a_match">It\'s a match</string>
    <string name="start_messaging">Начни общение сейчас, не упусти свой шанс!</string>
    <string name="start_talk">Начать общение</string>
    <string name="show_profile">Смотреть профиль</string>
    <string name="msgs">Сообщения</string>
    <string name="view_likes">Посмотреть лайки</string>
    <string name="message">Сообщение</string>
    <string name="novel_hi">Привет, это NOVEL</string>
    <string name="my_vibe">Почувствуй мой вайб...</string>
    <string name="dates_text">Свидания</string>
    <string name="nserials">Смотреть\nсериалы</string>
    <string name="creative_text">Креативщики</string>
    <string name="sports_text">Спортсмены</string>
    <string name="nver_prof">Верификация\nвашего профиля</string>
    <string name="ver_photo_text">Подтвердите своё фото</string>
    <string name="_5_nerre">Сделай короткое видеоселфи на 5 секунд с краткой информацией о себе — возраст и имя\nПодтвердите,что на фото вы!</string>
    <string name="text_ima">Удивляй с нами</string>
    <string name="images">Изображения</string>
    <string name="wanna_edit_msh">Хотите отредактировать сообщение?</string>
    <string name="yep">Да</string>
    <string name="editing">Редактирование</string>

    <string-array name="range_slider">
        <item>0.0</item>
        <item>1000.0</item>
    </string-array>
    <string-array name="range_slider_age">
        <item>18.0</item>
        <item>25.0</item>
    </string-array>
</resources>