<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey">

    <RelativeLayout
        android:id="@+id/rel_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/img"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/logo_grad"
            android:contentDescription="@string/todo"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/img"
            android:fontFamily="@font/lato"
            android:text="@string/novel"
            android:textSize="22sp" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/h1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_below="@+id/rel_logo"
        android:layout_marginTop="80dp"
        android:text="@string/text_enter_e_mail"
        android:textSize="27sp"
        android:fontFamily="@font/lato"
        android:textColor="@color/grey" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_varia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/h1"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/other_grey"
        android:inputType="textEmailAddress"
        android:textColor="@color/grey"
        android:fontFamily="@font/lato"
        android:hint="@string/email"
        android:textColorHint="@color/other_grey"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_problem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="42dp"
        android:layout_below="@id/input_varia"
        android:layout_marginTop="12dp"
        android:text="@string/el_problema"
        android:textSize="14sp"
        android:textColor="@color/cool"
        android:fontFamily="@font/lato"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/h5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_below="@id/btn_problem"
        android:layout_marginTop="12dp"
        android:text="@string/_dfdfemail"
        android:textSize="12sp"
        android:textColor="@color/other_grey"
        android:lineSpacingExtra="1sp"
        android:gravity="center_vertical"
        android:alpha="0.8"
        android:fontFamily="@font/lato"/>

    <RelativeLayout
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_google">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/google_img"
                android:contentDescription="@string/todo"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/google_enter"
                android:textSize="16sp"
                android:textColor="@color/cool"
                android:fontFamily="@font/lato"
                android:layout_toEndOf="@id/img2"
                android:gravity="center"
                android:layout_marginStart="6dp"/>
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_fix_internet"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_above="@id/btn_google"
        android:layout_marginBottom="12dp"
        android:background="@drawable/btn_grad">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/cont"
            android:textSize="16sp"
            android:textColor="@color/light_grey"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</RelativeLayout>