<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad">

    <ImageView
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/back_white"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="5dp"
        android:paddingStart="1dp"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/pip"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_below="@+id/back"
        android:layout_marginTop="80dp"
        android:src="@drawable/pip"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/h5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_below="@id/h1"
        android:layout_marginTop="12dp"
        android:text="@string/auto_or_manual"
        android:textSize="12sp"
        android:textColor="#E7E8EC"
        android:lineSpacingExtra="1sp"
        android:gravity="center_vertical"
        android:alpha="0.8"
        android:fontFamily="@font/lato"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/h1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pip"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginTop="28dp"
        android:text="@string/enter_loc"
        android:textSize="27sp"
        android:fontFamily="@font/lato"
        android:textColor="@color/light_grey" />

    <RelativeLayout
        android:id="@+id/btn_fix_internet"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_below="@id/h5"
        android:layout_marginTop="42dp"
        android:background="@drawable/btn_white">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cont"
            android:textSize="16sp"
            android:textColor="@color/cool"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/rookami"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_fix_internet"
        android:layout_marginTop="16dp"
        android:text="@string/manually"
        android:textSize="16sp"
        android:textColor="@color/light_grey"
        android:gravity="center_horizontal|center_vertical"
        android:fontFamily="@font/lato"/>

</RelativeLayout>