<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:padding="16dp">

    <RelativeLayout
        android:id="@+id/top_rel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/grey_circle"
            android:src="@drawable/back"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingEnd="5dp"
            android:paddingStart="1dp"
            android:contentDescription="@string/todo"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/window_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_result"
            android:textSize="14sp"
            android:layout_centerInParent="true"
            android:textColor="@color/cool"
            android:gravity="center"
            android:fontFamily="@font/lato"/>
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_rel"
        android:layout_marginTop="32dp"
        android:text="@string/pay_success"
        android:textSize="27sp"
        android:textColor="@color/grey"
        android:fontFamily="@font/lato"/>

</RelativeLayout>